# shares-portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  historical-data.ipynb  index.html  portfolio.ipynb  pyproject.toml  stocks.ipynb
.github/workflows/: eleventy_build.yml  pages_build.yml
data/: portfolio.yaml
data/dividents/: ftse-sm-div.json  russell_2000-div.json  vti-div.json
data/monthly-returns/: IJS-returns.txt  TIP-returns.txt  VTV-returns.txt  bnd-returns.txt  dbc-returns.txt  eafe-returns-monthly.txt  eafe-small-cap-return-monthly.txt  gld-returns.txt  russell_2000-returns-monthly.txt  s&p_500-returns.txt  shy-returns.txt  vnq-returns.txt  vti-returns-monthly.txt  vug-returns.txt
data/tamasset/: yearly.txt
docs/: index.html
notebooks/: portfolio.ipynb
scripts/: convert_notebooks.sh  run_notebooks.sh  update-html.sh
src/: distribution.py  efficient_frontier.py  laxy_portfolio_etf.py  plot_utils.py  portfolio.py  statistics.py
src/data/: portfolio.py  shares.py
src/display/: distribution.py  efficient_frontier.py  portfolio.py  utils.py
src/domain/: __init__.py  distribution.py  efficient_frontier.py  numbers_utils.py  share_data.py  share_type.py  stock_returns.py
src/mappers/: distribution.py
web/: .eleventy.js  package-lock.json  package.json
web/src/: index.md
web/src/_includes/: base.css  base.njk
