
[tool.poetry]
name = "shares-portfolio"
version = "0.1.0"
description = ""
authors = ["Anatoly Belonog <anatolybelonog@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
kaleido = "0.2.1"
plotly = "5.6.0"
Jinja2 = "3.1.1"
jupyterlab = "3.3.2"
matplotlib = "3.5.1"
jupyterlab-widgets = "1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
